src/objects/AnswerOption__c.object
<CustomObject>
    <fields>
        <fullName>AnswerOptionText__c</fullName>
        <label>Answer Option Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IsCorrect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Correct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MatchingText__c</fullName>
        <label>Matching Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OrderFormula__c</fullName>
        <formula>IF( Question__r.ShuffleAnswerOptions__c ,
mod( 
    (
       ( value(mid(text(NOW()),18,2)) + value(mid(text(NOW()),12,2)) ) *
       ( value(mid(text(NOW()),18,2)) + value(mid(text(NOW()),15,2)) ) 
    ) / Order__c
    , ( Order__c + 100 )

), Order__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Answer Options</relationshipLabel>
        <relationshipName>AnswerOptions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Answer Option</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AO-{00000000}</displayFormat>
        <label>Answer Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answer Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AnswerTextRequired</fullName>
        <active>true</active>
        <description>The answer option text is required.</description>
        <errorConditionFormula>AND( TEXT(Question__r.Type__c) &lt;&gt; &apos;Matching Options&apos;, ISBLANK( AnswerOptionText__c ))</errorConditionFormula>
        <errorDisplayField>AnswerOptionText__c</errorDisplayField>
        <errorMessage>The answer option text is required.</errorMessage>
    </validationRules>
</CustomObject>